# language_flash_cards

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_03_29_1159-7f1aef896dc8_initial.py  41b71bc16f35_initial.py
src/: database.py  exceptions.py  main.py  models.py
src/application/dto/: health.py  user.py
src/application/use_cases/health/: health_check.py
src/application/use_cases/user/: user_create.py
src/config/: __init__.py  main_settings.py  swagger.py
src/core/: config.py
src/domain/: enums.py
src/domain/entities/: user.py
src/domain/interfaces/: health_checker.py
src/domain/interfaces/repositories/: user.py
src/entrypoints/api/: openapi.py  registrar.py  router.py
src/entrypoints/api/health/: router.py  schemas.py
src/entrypoints/api/user/: router.py  schemas.py
src/infra/: health_checkers.py
src/infra/di/: health_checkers.py  postgres.py  repositories.py  settings.py  use_cases.py
src/infra/postgres/models/: __init__.py  base.py  user.py
src/infra/repositories/sqlalchemy/: user.py
