[tool.poetry]
name = "language-flash-cards"
version = "0.1.0"
description = "Language flash cards project"
authors = ["Pavel Khramov <khramov_pd@devtrix.ru>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'
line_length = 79
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git', '__pycache__', '*.yml.enc']

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = ['.git', '__pycache__', '*.yml.enc']

[tool.flake8]
max-line-length = 79
exclude = ['.git', '__pycache__', '*.yml.enc', '*/migrations/*']
